add dentist swagger doc
